--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "~1.4.2",
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
-    "angular": "~1.4.2"
+    "angular": "~1.4.2",
+    "angular-local-storage": "~0.2.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
