--- a/bower.json
+++ b/bower.json
@@ -9,11 +9,11 @@
     "angular-messages": "~1.4.2",
     "angular-aria": "~1.4.2",
     "restangular": "~1.5.1",
-    "angular-route": "~1.4.2",
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "angular": "~1.4.2",
-    "angular-local-storage": "~0.2.3"
+    "angular-local-storage": "~0.2.3",
+    "angular-ui-router": "~0.2.15"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
